--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
 	<script src="sketch.js"></script>
-	<script src="fourier.js"></script>
+	<script src="Fourier.js"></script>
 	<script src="Epycicle.js"></script>
 	<script src="Complex.js"></script>
 
